\name{RSA}
\title{News for package 'RSA'}
\encoding{UTF-8}


\section{Version 0.10.XXXXXXX}{ % TODO: chose version number before upload to CRAN
\subsection{New features}{
	\itemize{
		\item Draw user-defined lines on the surface (see new argument \code{addLines} in \code{plotRSA}).
}
}
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item In the plots, the user-defined axesStyles will now also be applied to the contour plot.
		\item Fixed error in plotRSA when pal is set by the user.
	}
}
}


\section{Version 0.10.5}{
\subsection{New features}{
	\itemize{
		\item Draw stilts for selected data points in plot (see new argument \code{stilt} in the points list, see \code{?plotRSA}).
		\item Change color of data point border (see new argument \code{fill} in the points list, see \code{?plotRSA}). If parameter \code{fill} is provided, then this is the fill of the points, and \code{color} is the border color. (This behavior is inherited from R, which uses this system for pch=21).
}
}
}


\section{Version 0.10.4}{
\subsection{New features}{
	\itemize{
		\item New demo data set (self-generated fake data): \code{selfother} (can be used to try inclusion of control variables and to try cubic RSA)
}
}
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item Fixed error in estimation of SRSQD model (by replacing a model constraint by an equivalent formula).
	}
}
}


\section{Version 0.10.3}{
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item Documented the discrepancy output of the summary() function in the help file.
	}
}
}

\section{Version 0.10.2}{
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item Moved tkrplot package to "Suggests" to make RSA compatible with Apple Silicon.
	}
}
}


\section{Version 0.10.1}{
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item Fixed error in aictab function (had to react to a change in R 4.0.0 concerning stringsAsFactors)
		\item Fixed error in discrepancy output of the summary() function
	}
}
}


\section{Version 0.10.0}{

